--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,7 +21,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 		<title>Temitayo Ogunsusi</title>
-		<script src="js/viewport.js"></script>
+		<!-- <script src="js/viewport.js"></script> -->
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
